Fix BibTeX Error to ensure correct import

--- a/writing/thesis/bibliography.bib
+++ b/writing/thesis/bibliography.bib
@@ -277,7 +277,7 @@ series = {ICPE '23}
   doi = {https://doi.org/10.1016/j.proeng.2012.06.412},
   url = {https://www.sciencedirect.com/science/article/pii/S1877705812023259},
   author = {Tarun Goyal and Ajit Singh and Aakanksha Agrawal},
-  keywords = {Cloud Computing, CloudSim, Simulation and Data center\},
+  keywords = {Cloud Computing, CloudSim, Simulation and Data center},
   abstract = {Cloud Computing aims to deliver reliable, secure, fault-tolerant, sustainable and scalable infrastructure for hosting Internet-based application services. To model and schedule the different applications and services for cloud infrastructure system is an tremendous challenging task which requires different load and energy performance. This problem is solved by introducing CloudSim: a simulation framework that provides simulation, power to manage services and modelling of cloud infrastructure. In this paper we have discussed about the working of CloudSim & about its updated versions.}
 }
 
