Add missing base : Mockfog 1.0

--- a/writing/thesis/bibliography.bib
+++ b/writing/thesis/bibliography.bib
@@ -319,6 +319,17 @@ series = {ICPE '23}
   primaryClass={cs.DC},
   url={https://arxiv.org/abs/1606.02007}, 
 }
+
+% > Mockfog 1.0 (Base)
+@inproceedings{sim-base-mockfog1,
+author = {Hasenburg, Jonathan and Grambow, Martin and Grünewald, Elias and Huk, Sascha and Bermbach, David},
+year = {2019},
+month = {06},
+pages = {},
+title = {MockFog: Emulating Fog Computing Infrastructure in the Cloud},
+doi = {10.1109/ICFC.2019.00026}
+}
+
 % > EdgeAISim
 @article{sim-edgeAIsim,
    title={EdgeAISim: A toolkit for simulation and modelling of AI models in edge computing environments},
