Adding missing base: MaxiNet & MiniNet

--- a/writing/thesis/bibliography.bib
+++ b/writing/thesis/bibliography.bib
@@ -320,6 +320,38 @@ series = {ICPE '23}
   url={https://arxiv.org/abs/1606.02007}, 
 }
 
+% > MaxiNet (Base)
+@INPROCEEDINGS{sim-base-maxinet,
+  author={Wette, Philip and Dräxler, Martin and Schwabe, Arne and Wallaschek, Felix and Zahraee, Mohammad Hassan and Karl, Holger},
+  booktitle={2014 IFIP Networking Conference}, 
+  title={MaxiNet: Distributed emulation of software-defined networks}, 
+  year={2014},
+  volume={},
+  number={},
+  pages={1-9},
+  keywords={Emulation;Servers;Generators;Round robin;Entropy;Topology;Routing},
+  doi={10.1109/IFIPNetworking.2014.6857078}
+}
+
+% > MiniNet (Base)
+@inproceedings{sim-base-mininet,
+  author = {Lantz, Bob and Heller, Brandon and McKeown, Nick},
+  title = {A network in a laptop: rapid prototyping for software-defined networks},
+  year = {2010},
+  isbn = {9781450304092},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/1868447.1868466},
+  doi = {10.1145/1868447.1868466},
+  abstract = {Mininet is a system for rapidly prototyping large networks on the constrained resources of a single laptop. The lightweight approach of using OS-level virtualization features, including processes and network namespaces, allows it to scale to hundreds of nodes. Experiences with our initial implementation suggest that the ability to run, poke, and debug in real time represents a qualitative change in workflow. We share supporting case studies culled from over 100 users, at 18 institutions, who have developed Software-Defined Networks (SDN). Ultimately, we think the greatest value of Mininet will be supporting collaborative network research, by enabling self-contained SDN prototypes which anyone with a PC can download, run, evaluate, explore, tweak, and build upon.},
+  booktitle = {Proceedings of the 9th ACM SIGCOMM Workshop on Hot Topics in Networks},
+  articleno = {19},
+  numpages = {6},
+  keywords = {virtualization, software defined networking, rapid prototyping, open-flow, emulation},
+  location = {Monterey, California},
+  series = {Hotnets-IX}
+}
+
 % > Mockfog 1.0 (Base)
 @inproceedings{sim-base-mockfog1,
 author = {Hasenburg, Jonathan and Grambow, Martin and Grünewald, Elias and Huk, Sascha and Bermbach, David},
