--- a/writing/thesis/main.tex
+++ b/writing/thesis/main.tex
@@ -6,6 +6,8 @@
 	biblatexOptions={natbib=true,backend=biber},%
 	acronymOptions={smaller,printonlyused},%,withpage
 ]{ifiseries}
+\usepackage{tabularx}
+\usepackage{array}
 \usepackage{hyperref}
 %\usepackage[language=english,theorems=numbersfirst,paper=a4paper]{ifiseries}
 % <++USE language=german IF YOUR DOCUMENT WILL BE IN GERMAN ++>
