Fix some formatting and wording, remove redundant text and start with anaylsis

--- a/writing/thesis/bibliography.bib
+++ b/writing/thesis/bibliography.bib
@@ -251,6 +251,16 @@ location = {Coimbra, Portugal},
 series = {ICPE '23}
 }
 
+@inproceedings{BRITE,
+  author = {Medina, Alberto and Lakhina, Anukool and Matta, Ibrahim and Byers, John},
+  year = {2001},
+  month = {02},
+  pages = {346-353},
+  title = {BRITE: an approach to universal topology generation},
+  isbn = {0-7695-1315-8},
+  doi = {10.1109/MASCOT.2001.948886}
+}
+
 % ---------
 % ECOSCAPE PAPER!!!
 @misc{reiter2025ecoscapefaulttolerancebenchmark,
