Fix some inconsistencies, merge overlapping sections, add remaining draft for state-of-the-art analysis

--- a/writing/thesis/bibliography.bib
+++ b/writing/thesis/bibliography.bib
@@ -261,6 +261,59 @@ series = {ICPE '23}
   doi = {10.1109/MASCOT.2001.948886}
 }
 
+@misc{qi2025surveyopensourceedgecomputing,
+  title={A Survey on Open-Source Edge Computing Simulators and Emulators: The Computing and Networking Convergence Perspective}, 
+  author={Jianpeng Qi and Chao Liu and Xiao Zhang and Lei Wang and Rui Wang and Junyu Dong and Yanwei Yu},
+  year={2025},
+  eprint={2505.09995},
+  archivePrefix={arXiv},
+  primaryClass={cs.NI},
+  url={https://arxiv.org/abs/2505.09995}, 
+}
+
+@Article{s23073492,
+  AUTHOR = {Fahimullah, Muhammad and Philippe, Guillaume and Ahvar, Shohreh and Trocan, Maria},
+  TITLE = {Simulation Tools for Fog Computing: A Comparative Analysis},
+  JOURNAL = {Sensors},
+  VOLUME = {23},
+  YEAR = {2023},
+  NUMBER = {7},
+  ARTICLE-NUMBER = {3492},
+  URL = {https://www.mdpi.com/1424-8220/23/7/3492},
+  PubMedID = {37050551},
+  ISSN = {1424-8220},
+  ABSTRACT = {Fog Computing (FC) was introduced to offer resources closer to the users. Researchers propose different solutions to make FC mature and use simulators for evaluating their solutions at early stages. In this paper, we compare different FC simulators based on their technical and non-technical characteristics. In addition, a practical comparison is conducted to compare the three main FC simulators based on their performance such as execution time, CPU, and memory usage for running different applications. The analysis can be helpful for researchers to select the appropriate simulator and platform to evaluate their solutions on different use cases. Furthermore, open issues and challenges for FC simulators are discussed that require attention and need to be addressed in the future.},
+  DOI = {10.3390/s23073492}
+}
+
+@article{MECHALIKH2025103042,
+  title = {Quality matters: A comprehensive comparative study of edge computing simulators},
+  journal = {Simulation Modelling Practice and Theory},
+  volume = {138},
+  pages = {103042},
+  year = {2025},
+  issn = {1569-190X},
+  doi = {https://doi.org/10.1016/j.simpat.2024.103042},
+  url = {https://www.sciencedirect.com/science/article/pii/S1569190X24001564},
+  author = {Charafeddine Mechalikh and Abd El Heq Silem and Zahra Safavifar and Fatemeh Golpayegani},
+  keywords = {Simulation frameworks, Fog computing, Edge computing, Modeling and simulation, Quality evaluation},
+  abstract = {Edge computing, by pushing resources closer to the network’s edge, is revolutionizing data processing, enabling real-time analysis and localized decision-making on resource-constrained devices. However, designing and validating innovative solutions within this dynamic environment presents significant challenges. While numerous edge simulators exist, their shortcomings often restrict researchers’ ability to address their research questions. Many of them serve specific use cases (e.g., small scale scenarios, static application placement, etc.), lacking the breadth and flexibility needed for diverse research requirements. Furthermore, the lack of benchmarking studies complicates the process of selecting the right simulators for a specific need. This study addresses these limitations by presenting a comprehensive evaluation of 24 edge computing simulators, filling a critical gap in the literature. We propose a robust methodology that assesses the simulators based on functionality, maintenance, scalability, reliability, efficiency, and usability. Our study provides clear classifications and comparisons of the simulators to assist researchers in selecting the most suitable one for their edge computing scenarios. Additionally, we identify and discuss opportunities and challenges for advancing the current state of the art in edge simulation, highlighting potential areas for future research.}
+}
+
+@Article{fi11030055,
+  AUTHOR = {Svorobej, Sergej and Takako Endo, Patricia and Bendechache, Malika and Filelis-Papadopoulos, Christos and Giannoutakis, Konstantinos M. and Gravvanis, George A. and Tzovaras, Dimitrios and Byrne, James and Lynn, Theo},
+  TITLE = {Simulating Fog and Edge Computing Scenarios: An Overview and Research Challenges},
+  JOURNAL = {Future Internet},
+  VOLUME = {11},
+  YEAR = {2019},
+  NUMBER = {3},
+  ARTICLE-NUMBER = {55},
+  URL = {https://www.mdpi.com/1999-5903/11/3/55},
+  ISSN = {1999-5903},
+  ABSTRACT = {The fourth industrial revolution heralds a paradigm shift in how people, processes, things, data and networks communicate and connect with each other. Conventional computing infrastructures are struggling to satisfy dramatic growth in demand from a deluge of connected heterogeneous end points located at the edge of networks while, at the same time, meeting quality of service levels. The complexity of computing at the edge makes it increasingly difficult for infrastructure providers to plan for and provision resources to meet this demand. While simulation frameworks are used extensively in the modelling of cloud computing environments in order to test and validate technical solutions, they are at a nascent stage of development and adoption for fog and edge computing. This paper provides an overview of challenges posed by fog and edge computing in relation to simulation.},
+  DOI = {10.3390/fi11030055}
+}
+
 % ---------
 % ECOSCAPE PAPER!!!
 @misc{reiter2025ecoscapefaulttolerancebenchmark,
