Update title of thesis

--- a/writing/thesis/main.tex
+++ b/writing/thesis/main.tex
@@ -13,7 +13,7 @@
 % <++USE language=german IF YOUR DOCUMENT WILL BE IN GERMAN ++>
 
 % <++CHANGE PDF SETTINGS++>
-\hypersetup{pdftitle=Systematic Analysis and Improvement of Edge Computing Simulators}
+\hypersetup{pdftitle=Ecoscape as a Validated Edge-Cloud-Continuum Simulator: An LLM Use-Case Integration and Comparative Study}
 \hypersetup{pdfauthor=Darlin Stücker}
 \hypersetup{pdfsubject=Master's Thesis}
 \hypersetup{pdfkeywords=}
@@ -46,7 +46,7 @@
 \frontmatter
 
 \studtitlepage%
-{Systematic Analysis and Improvement of Edge Computing Simulators}% title
+{Ecoscape as a Validated Edge-Cloud-Continuum Simulator: An LLM Use-Case Integration and Comparative Study}% title
 {}% subtitle
 {Darlin Stücker}% author
 {Master's Thesis}% type
