Finish up re-structure (Feedback from presentation)

--- a/writing/thesis/main.tex
+++ b/writing/thesis/main.tex
@@ -72,8 +72,9 @@
 \include{chapter/02_foundations}
 \include{chapter/03_state_of_the_art}
 \include{chapter/04_requirements_catalogue}
-\include{chapter/05_ecoscape}
-\include{chapter/06_conclusion}
+\include{chapter/05_use_case}
+\include{chapter/06_evaluation}
+\include{chapter/07_conclusion}
 
 \backmatter
 \tocbibliography
