--- a/writing/thesis/bibliography.bib
+++ b/writing/thesis/bibliography.bib
@@ -203,6 +203,84 @@
   doi = {10.1109/WSC.2002.1166451}
 }
 
+@misc{bai2024efficiencysystematicsurveyresourceefficient,
+      title={Beyond Efficiency: A Systematic Survey of Resource-Efficient Large Language Models}, 
+      author={Guangji Bai and Zheng Chai and Chen Ling and Shiyu Wang and Jiaying Lu and Nan Zhang and Tingwei Shi and Ziyang Yu and Mengdan Zhu and Yifei Zhang and Xinyuan Song and Carl Yang and Yue Cheng and Liang Zhao},
+      year={2024},
+      eprint={2401.00625},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2401.00625}, 
+}
+
+@misc{xi2023risepotentiallargelanguage,
+      title={The Rise and Potential of Large Language Model Based Agents: A Survey}, 
+      author={Zhiheng Xi and Wenxiang Chen and Xin Guo and Wei He and Yiwen Ding and Boyang Hong and Ming Zhang and Junzhe Wang and Senjie Jin and Enyu Zhou and Rui Zheng and Xiaoran Fan and Xiao Wang and Limao Xiong and Yuhao Zhou and Weiran Wang and Changhao Jiang and Yicheng Zou and Xiangyang Liu and Zhangyue Yin and Shihan Dou and Rongxiang Weng and Wensen Cheng and Qi Zhang and Wenjuan Qin and Yongyan Zheng and Xipeng Qiu and Xuanjing Huang and Tao Gui},
+      year={2023},
+      eprint={2309.07864},
+      archivePrefix={arXiv},
+      primaryClass={cs.AI},
+      url={https://arxiv.org/abs/2309.07864}, 
+}
+
+@misc{raschka2020machinelearningpythonmain,
+      title={Machine Learning in Python: Main developments and technology trends in data science, machine learning, and artificial intelligence}, 
+      author={Sebastian Raschka and Joshua Patterson and Corey Nolet},
+      year={2020},
+      eprint={2002.04803},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2002.04803}, 
+}
+
+@article{muellermichael2025pytheninaiandmachinelearning,
+author = {Müller, Michael},
+year = {2025},
+month = {01},
+pages = {55-58},
+title = {Leveraging Python in AI and Machine Learning: A Survey of Techniques and Educational Approaches in Software Engineering},
+volume = {9}
+}
+
+@misc{paszke2019pytorchimperativestylehighperformance,
+      title={PyTorch: An Imperative Style, High-Performance Deep Learning Library}, 
+      author={Adam Paszke and Sam Gross and Francisco Massa and Adam Lerer and James Bradbury and Gregory Chanan and Trevor Killeen and Zeming Lin and Natalia Gimelshein and Luca Antiga and Alban Desmaison and Andreas Köpf and Edward Yang and Zach DeVito and Martin Raison and Alykhan Tejani and Sasank Chilamkurthy and Benoit Steiner and Lu Fang and Junjie Bai and Soumith Chintala},
+      year={2019},
+      eprint={1912.01703},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/1912.01703}, 
+}
+
+@misc{wang2023selfinstructaligninglanguagemodels,
+      title={Self-Instruct: Aligning Language Models with Self-Generated Instructions}, 
+      author={Yizhong Wang and Yeganeh Kordi and Swaroop Mishra and Alisa Liu and Noah A. Smith and Daniel Khashabi and Hannaneh Hajishirzi},
+      year={2023},
+      eprint={2212.10560},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2212.10560}, 
+}
+
+@misc{alpaca,
+  author = {Rohan Taori and Ishaan Gulrajani and Tianyi Zhang and Yann Dubois and Xuechen Li and Carlos Guestrin and Percy Liang and Tatsunori B. Hashimoto },
+  title = {Stanford Alpaca: An Instruction-following LLaMA model},
+  year = {2023},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/tatsu-lab/stanford_alpaca}},
+}
+
+@misc{wolf2020huggingfacestransformersstateoftheartnatural,
+      title={HuggingFace's Transformers: State-of-the-art Natural Language Processing}, 
+      author={Thomas Wolf and Lysandre Debut and Victor Sanh and Julien Chaumond and Clement Delangue and Anthony Moi and Pierric Cistac and Tim Rault and Rémi Louf and Morgan Funtowicz and Joe Davison and Sam Shleifer and Patrick von Platen and Clara Ma and Yacine Jernite and Julien Plu and Canwen Xu and Teven Le Scao and Sylvain Gugger and Mariama Drame and Quentin Lhoest and Alexander M. Rush},
+      year={2020},
+      eprint={1910.03771},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/1910.03771}, 
+}
+
 @book{10.5555/3175917,
 author = {Hightower, Kelsey and Burns, Brendan and Beda, Joe},
 title = {Kubernetes: Up and Running Dive into the Future of Infrastructure},
