--- a/writing/thesis/bibliography.bib
+++ b/writing/thesis/bibliography.bib
@@ -281,6 +281,26 @@ volume = {9}
       url={https://arxiv.org/abs/1910.03771}, 
 }
 
+@misc{peeperkorn2024temperaturecreativityparameterlarge,
+      title={Is Temperature the Creativity Parameter of Large Language Models?}, 
+      author={Max Peeperkorn and Tom Kouwenhoven and Dan Brown and Anna Jordanous},
+      year={2024},
+      eprint={2405.00492},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2405.00492}, 
+}
+
+@misc{du2025optimizingtemperaturelanguagemodels,
+      title={Optimizing Temperature for Language Models with Multi-Sample Inference}, 
+      author={Weihua Du and Yiming Yang and Sean Welleck},
+      year={2025},
+      eprint={2502.05234},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2502.05234}, 
+}
+
 @book{10.5555/3175917,
 author = {Hightower, Kelsey and Burns, Brendan and Beda, Joe},
 title = {Kubernetes: Up and Running Dive into the Future of Infrastructure},
